-Changed brands' list structure -Fixed logos not showing correctly on the header -Added new buttons to list brands, founders or both (not functional yet)

--- a/static/css/brands.css
+++ b/static/css/brands.css
@@ -31,14 +31,34 @@ img.map-image{
 	margin: auto;
 }
 
-button#list-all{
+button#list-all,button#list-brn,button#list-fnd{
 	display: block;
+	float: left;
 	vertical-align: middle;
-	margin-top: 50;
+	margin-top: 50px;
+}
+button#list-brn{
+	width: 200px;
+	height: 30px;
+}
+button#list-fnd{
+	width: 200px;
+	height: 30px;
+}
+button#list-all{
 	width: 200px;
 	height: 30px;
 }
 
+div.button-container{
+	display: block;
+	width: 800px;	
+	top: 0;
+	left: 0;
+	right: 0;
+	margin-left: auto;
+	margin-right: auto;
+}
 
 table#brands-table{
 	margin-top: 2px;
